# ocppsim

./: Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
.github/workflows/: build.yml  docker.yml  release.yml  tests.yml
docs/: README.md  design.md  development.md  ocpp-support.md  usage.md
schemas/: README.md
src/: app.rs  args.rs  commands.rs  config.rs  embedded_schemas.rs  lib.rs  main.rs  ocpp.rs  sensitive.rs  version.rs
src/app/: completion.rs  history.rs
src/simulator/: incoming.rs  mod.rs  payloads.rs  redaction.rs  security.rs  support.rs  types.rs  workflow.rs
src/simulator/incoming/: dispatch.rs  dispatch_v1_6.rs  dispatch_v2_x.rs  pending.rs  request.rs  shared.rs  v1_6.rs  v2_x.rs  ws.rs
src/simulator/tests/: charging_profiles.rs  configuration.rs  mod.rs  schema_validation.rs  security.rs  state.rs  transactions.rs  ws_lifecycle.rs
src/simulator/workflow/: call_result.rs  enqueue.rs  io.rs  state.rs  transactions.rs  trigger.rs
